--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	<!--	<dependency>
-			<groupId>org.springframework.boot</groupId>
+	<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
         -->
@@ -53,6 +53,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<scope>provided</scope>\
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
