--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ecommerce
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ecom
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=leela7036024929
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
